less/sky/navigation.less
@import "globals";

.set_navigation(@x_pos, @width, @padding, @level: 1) {
    width: @width;
    padding-right: @padding;
    background-position: -@x_pos -((2 * @navigation_layer_height) * (@level - 1));
    &:hover {
        background-position: -@x_pos -(@navigation_layer_height * (2 * @level - 1));
    }
}

#user_nav {
    a {
		float: right;
		margin-right: 10px;
		padding-top: 5px;
		
		&.link_login {
            .set_navigation(499px, -1px, 20px);
        }
        
        &.link_logout {
            .set_navigation(499px, -1px, 20px, 2);
        }
	}
} 

#navigation {
    padding: 0px;
    margin: 70px 20px 0px 0px;
    list-style-type: none;
    .floater(block, right);
    width: @navigation_width;

    a {
        background: url("../../images/sky/navigation.png");
        height: 11px;
        text-indent: -9000px; 
        .floater(block, left);

        &.link1 {
            .set_navigation(0px, 42px, 21px);
        }

        &.link2 {
            .set_navigation(63px, 54px, 21px) 
        }

        &.link3 {
            .set_navigation(138px, 168px, 18px);
        }

        &.link4 {
            .set_navigation(324px, 46px, 21px);
        }

        &.link5 {
            .set_navigation(391px, 70px, 24px);
        }

    }
}

.event_title {
	color: #343434;
	font-size: 17px;
	line-height: 2em;
}

.event_description {
	padding-top: 0.5em;
	font-size: 12px;
	color: #616161;
}

.event_location, .event_time {
	color: #616161;
	font-size: 12px;
}

#posts {
	width: 75%;
	margin: 2% 0%;
}

.post_content {
	text-align: justify;
	font-size: 13px;
	color: #343434;
}

.post_time {
	color: #616161;
	font-size: 13px;
}

.post_title {
	line-height: 2em;
	font-size: 20px;
}
 
.post_img {
	float: right;
	margin: 5% 0% 5% 5%;
}

#copyright {
	margin-left: 40%;
	margin-top: 25px;
}

#footer {
	background: url("../../images/sky/usernav_bg.png");
	height: 70px;
	position: absolute;
	width:100%;
	bottom: 0px;
	
	img {
		position: absolute;
		bottom: 15px;
	}
}

#black {
	right: 50px;
}

#dark_blue {
	right: 100px;
}

#light_blue {
	right: 150px;
}

.upcoming_events_title {
  font-size: 20px;
  line-height: 2em;
}

.calendar {
  float: right;
  border-style: none;
}

